2017-12-18  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix editing of transfer part of split transaction
	* Fix split transaction account selection when joining transfers
	* Set split values from input fields when clicking "Edit..." in a transactions view

2017-12-17  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow account creation from loan payment dialog
	* Update logic for when confirm schedule dialog is shown or transaction is automatically 
	  added when scheduled transaction is added/edited

2017-12-15  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow account creation from edit security dialog

2017-12-15  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow security creation from security transactions dialog

2017-12-14  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remember state of set quote checkbox
	* Fix segfault on edit multiple transactions from ledger
	* Show statistics for selection in ledger
	* Calculate average balance correctly

2017-12-13  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Set last used category/account for new transaction dialogs
	* Ledger popup menu
	* Add warning message to adjust balance dialog

2017-12-09  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reconciliation

2017-12-08  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ledger list header popup menu to show/hide type, account/category, payee/payer and comments columns
	* Revised reinvested dividends

2017-10-26  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix sum in categories comparison report with subcategories
	* Fix categories comparison chart for incomes with subcategories

2017-10-24  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix "All Incomes, without subcategories" in categories comparison chart

2017-10-23  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when trying to create new debt payment without any debt (possible fix for issue #33)
	* Do not allow zero value for new loan
